1. Created Resume and Reccomendation pages. 2. Set up pages to get developed later 3. Changed some CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Christofer Piedra's Website</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,17 +12,26 @@
     <table>
         <tr>
             <th>Games</th>
-            <th>Resume/CV</th>
+            <th>Work Related</th>
+            <th>Health & Fitness</th>
             <th>ML Projects</th>
         </tr>
         <tr>
-            <td>Hangman</td>
-            <td>Resume <a href=""></a></td>
-            <td>Face Detection</td>
+            <td><a href="hangman.html">Hangman</a></td>
+            <td><a href="cv.html">CV</a></td>
+            <td><a href="gymTracker.html">Gym Tracker</a></td>
+            <td><a href="faceDetection.html">Face Detection</a></td>
         </tr>
         <tr>
-            <td></td>
-            <td>Full CV</td>
+            <td><a href=""></a></td>
+            <td><a href="Christofer Piedra Resume.pdf">Resume</a></td>
+            <td><a href="foodTracker.html">Food Tracker</a></td>
+            <td><a href=""></a></td>
+        </tr>
+        <tr>
+            <td><a href=""></a></td>
+            <td><a href="reccomendations.html">Reccomendations</a></td>
+            <td><a href="recipies.html">Recipies</a></td>
             <td></td>
         </tr>
     </table>
